--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.25.3",
+    "lottie-web": "^5.10.2",
     "nuxt": "^2.15.8",
     "vue": "^2.7.10",
+    "vue-lottie": "^0.2.1",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10",
     "vuetify": "^2.6.10"
