--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.25.3",
+    "lottie-vuejs": "^0.4.0",
     "lottie-web": "^5.10.2",
     "nuxt": "^2.15.8",
     "vue": "^2.7.10",
